<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B4A4444"
    android:gravity="center"
    tools:context=".AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AdminAccTitleTextView"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/app_title" />

        <TextView
            android:id="@+id/AdminAccTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/AdminAccWelcomeTextView"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo_612x612" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/serviceSelectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/serviceSelectTextView"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/serviceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/servicesTextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/serviceHintTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/servicesHintTextView" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Switch
            android:id="@+id/CarRentalSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:gravity="center"
            android:text="@string/carRentalswitch"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/CarRentalPriceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/carRental_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <Switch
            android:id="@+id/TruckRentalSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:gravity="center"
            android:text="@string/truckRentalswitch"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/TruckRentalPriceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/truckRental_hint"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <Switch
            android:id="@+id/MovingAssistanceSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/movingswitch"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/MovingAssistancePriceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/moving_hint"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/deleteAccTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/DeleteAccTextView"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <EditText
            android:id="@+id/deleteAccUserEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/DeleteAccUser_hint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/deleteAccbtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#A53838"
            android:gravity="center"
            android:text="@string/deleteAccbtn" />
    </LinearLayout>
</RelativeLayout>