<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B4A4444"
    tools:context=".CarRentalForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/CarRentalTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/app_title" />

        <ImageView
            android:id="@+id/byblosLogoImageView3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo_612x612"/>

        <TextView
            android:id="@+id/CarRentalTitleTextView2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/CarRentalTitle"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/CarRentalPersonalInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/CarRentalPersonalInfo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/CarRentalFirstNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/CarRentalFirstName_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/CarRentalLastNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/CarRentalLastName_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/CarRentalDOBTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/CarRentalDOB_hint"
            android:inputType="date"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/CarRentalAddressEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/CarRentalAddress_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/CarRentalEmailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/CarRentalEmail_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/CarRentalLicenseRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/CarRentalLicenseTextView"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/CarRentalLicenseRadioGroup"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/CarRentalG1Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CarRentalLicenseG1Radiobtn" />

                    <RadioButton
                        android:id="@+id/CarRentalG2Radiobtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CarRentalLicenseG2Radiobtn" />

                </LinearLayout>

                <RadioButton
                    android:id="@+id/CarRentalGRadiobtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/CarRentalLicenseGRadiobtn" />

            </RadioGroup>

            <Space
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioGroup
                android:id="@+id/CarRentalPreferenceRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/carRentalPreferenceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/CarRentalPreferenceRadioGroup"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/CarRentalCompactRadioBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CarRentalCompactRadiobtn" />

                    <RadioButton
                        android:id="@+id/CarRentalSUVRadioBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CarRentalSUVRadiobtn" />

                </LinearLayout>

                <RadioButton
                    android:id="@+id/CarRentalIntermediateRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CarRentalIntermediateRadiobtn" />
            </RadioGroup>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/CarRentalDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/CarRentalDateTextView"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/CarRentalPickUpTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/CarRentalPickUp_hint"
                android:inputType="date" />

            <EditText
                android:id="@+id/CarRentalReturnTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/CarRentalReturn_hint"
                android:inputType="date" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:backgroundTint="#547897"
            android:gravity="center"
            android:text="@string/submitBtn" />

    </LinearLayout>
</RelativeLayout>