<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B4A4444"
    tools:context=".MovingAssistanceForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/MovingTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/app_title" />

        <ImageView
            android:id="@+id/byblosLogoImageView3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@color/white"
            app:srcCompat="@drawable/logo_612x612" />


        <TextView
            android:id="@+id/MovingTitleTextView2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/MovingTitle"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/MovingPersonalInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/MovingPersonalInfo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/MovingFirstNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/MovingFirstName_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/MovingLastNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/MovingLastName_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/MovingAddressEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/MovingAddress_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/MovingEmailEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/MovingEmail_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/MovingDOBTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/MovingDOB_hint"
            android:inputType="date"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/MovingLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/MovingLocationTextView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/MovingStartLocEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/MovingStartLocation_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/MovingEndLocEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/MovingEndLocation_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <TextView
            android:id="@+id/MovingNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/MovingNumTextView"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/MovingNumOfMoversEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/MovingNumOfMovers_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/MovingNumOfBoxesEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/MovingNumOfBoxes_hint"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:backgroundTint="#547897"
            android:gravity="center"
            android:text="@string/submitBtn" />

    </LinearLayout>
</RelativeLayout>