<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/globalBG"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/titlesBLUE"
            android:gravity="center"
            android:text="@string/registerTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/regEmailHint"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/regUserHint"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/regPswdHint"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/register_pn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/regNumHint"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/register_ha"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/regAddHint"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/register_confirm"
            android:layout_width="261dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:onClick="registerBtn"
            android:text="@string/regConfirmBtn"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>